add more endpoint implementations
